# AgarioEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example.cpp
.github/workflows/: build.yml
renderer/: CMakeLists.txt  SFMLRenderer.hpp  mouseObserver.cpp  renderer.hpp
renderer/SFMLmodels/: SFMLplayerObject.hpp
src/: CMakeLists.txt  bot.cpp  bot.hpp  constants.hpp  example.cpp  game.cpp  game.hpp  gameObject.hpp  player.cpp  player.hpp  playerObject.cpp  playerObject.hpp
src/maps/: map.cpp  map.hpp  mapBombController.cpp  mapCrashController.cpp  mapMiniController.cpp  mapPlayerMovement.cpp  mapPlayerMovement.hpp
src/renderer/: SFMLRenderer.cpp  SFMLRenderer.hpp  renderer.hpp
src/renderer/SFMLmodels/: SFMLbomb.hpp  SFMLplayerObject.hpp
src/shapes/: circle.hpp  moveableCircle.cpp  moveableCircle.hpp  shape.hpp  wObject.cpp
